objects/ResourceTypeUOMAssociation__c/ResourceTypeUOMAssociation__c.object-meta.xml
<CustomObject>
    <label>Resource Type Unit of Measure</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Type Unit of Measures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>