objects/ResourceTypeUOMAssociation__c/fields/BlockedUOM__c.field-meta.xml
<CustomField>
    <fullName>BlockedUOM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BlockedUOM</label>
    <type>Checkbox</type>
</CustomField>