objects/ResourceTypeUOMAssociation__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipName>ResourceTypeUOM</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>