objects/ResourceTypeUOMAssociation__c/fields/ResourceTypeUOMAssoicationCSID__c.field-meta.xml
<CustomField>
    <fullName>ResourceTypeUOMAssoicationCSID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResourceTypeUOMAssoicationCSID</label>
    <type>Text</type>
</CustomField>