objects/ResourceTypeUOMAssociation__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipName>ResourceTypeUOMAssociation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>