objects/ResourceTypeUOMAssociation__c/fields/Unit_of_Measure_CSID__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_CSID__c</fullName>
    <formula>Unit_of_Measure__r.CSID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit of Measure CSID</label>
    <type>Text</type>
</CustomField>